Reports/arm_processor/Experiment_Data_Thu__2_Nov_09:17:53_UTC_2017/Performance_Results/call-an-object-method/javascript.txt

/home/pi/GitHub/Rosetta_Code_Research_MSR/Scripts/rpi/call-an-object-method/javascript/call-an-object-method.js:1
(function (exports, require, module, __filename, __dirname) { class CallAnObje
                                                              ^^^^^
SyntaxError: Unexpected reserved word
    at Module._compile (module.js:439:25)
    at Object.Module._extensions..js (module.js:474:10)
    at Module.load (module.js:356:32)
    at Function.Module._load (module.js:312:12)
    at Function.Module.runMain (module.js:497:10)
    at startup (node.js:119:16)
    at node.js:906:3

real	0m0.480s
user	0m0.230s
sys	0m0.030s
